[tool.poetry]
name = "building-data-driven-applications-with-llamaindex"
version = "0.1.0"
description = ""
authors = ["eric-epsilla <eric@epsilla.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.10.43"
setuptools = "^70.0.0"
html2text = "^2024.2.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
